--- a/individual.css
+++ b/individual.css
@@ -1,5 +1,10 @@
 /* 80 minu the tops */
 
+body{
+    font-family: 'DM Sans', sans-serif;
+   }
+
+
 .name{
 position: absolute;
 width: 80%;
@@ -24,8 +29,6 @@ height: 31px;
 left: 140px;
 top: 186px;
 /* 266 */
-
-font-family: DM Sans;
 font-style: normal;
 font-weight: normal;
 font-size: 24px;
@@ -37,17 +40,14 @@ color: #04172A;
 
 .date{
  position: absolute;
-width: 50%;
+width: 60%;
 height: 31px;
 left: 551px;
 top: 186px;
-
-font-family: DM Sans;
 font-style: normal;
 font-weight: 500;
 font-size: 24px;
 line-height: 31px;
-
 color: #04172A;
 }
 
@@ -58,7 +58,7 @@ width: 670px;
 height: 416px;
 left: 140px;
 top: 257px;
-background: url(images/photo.png);
+background: url("https://i.ibb.co/mBjwP4r/photo.png");
 background-repeat: no-repeat; 
 }
 
@@ -81,6 +81,8 @@ width: 400px;
 height: 513px;
 left: 850px;
 top: 257px;
+right: 550px;
+bottom: 340px;
 /* border: 2px dashed red; */
 background: #FFFFFF;
 border: 1px solid rgba(4, 23, 42, 0.25);
@@ -280,7 +282,7 @@ position: absolute;
 width: 163px;
 height: 47px;
 left: 140px;
-top: 1430px;
+top: 1450px;
 
 font-family: DM Sans;
 font-style: normal;
@@ -299,7 +301,7 @@ color: #04172A;
     width: 178px;
     height: 72px;
     left: 632px;
-    top: 1420px;
+    top: 1450px;
     border: 2px solid #FB3F5C;
     box-sizing: border-box;
     border-radius: 10px;
@@ -307,9 +309,9 @@ color: #04172A;
 
 #cycle{
     position: absolute;
-    left: 300px;
+    left: 330px;
 right: 8.33%;
-top: 1472px; 
+top: 1492px; 
 bottom: 41.62%;
 
 }
