--- a/individual.css
+++ b/individual.css
@@ -1,5 +1,10 @@
 /* 80 minu the tops */
 
+body{
+    font-family: 'DM Sans', sans-serif;
+   }
+
+
 .name{
 position: absolute;
 width: 80%;
@@ -24,8 +29,6 @@ height: 31px;
 left: 140px;
 top: 186px;
 /* 266 */
-
-font-family: DM Sans;
 font-style: normal;
 font-weight: normal;
 font-size: 24px;
@@ -37,11 +40,10 @@ color: #04172A;
 
 .date{
  position: absolute;
-width: 50%;
+width: 60%;
 height: 31px;
 left: 551px;
 top: 186px;
-font-family: DM Sans;
 font-style: normal;
 font-weight: 500;
 font-size: 24px;
@@ -280,7 +282,7 @@ position: absolute;
 width: 163px;
 height: 47px;
 left: 140px;
-top: 1430px;
+top: 1450px;
 
 font-family: DM Sans;
 font-style: normal;
@@ -299,7 +301,7 @@ color: #04172A;
     width: 178px;
     height: 72px;
     left: 632px;
-    top: 1420px;
+    top: 1450px;
     border: 2px solid #FB3F5C;
     box-sizing: border-box;
     border-radius: 10px;
@@ -307,9 +309,9 @@ color: #04172A;
 
 #cycle{
     position: absolute;
-    left: 300px;
+    left: 330px;
 right: 8.33%;
-top: 1472px; 
+top: 1492px; 
 bottom: 41.62%;
 
 }
