--- a/individual.css
+++ b/individual.css
@@ -1,63 +1,67 @@
-/* 80 minu the tops */
-
+html, body {
+    max-width: 100%;
+}
+body{
+    padding: 0;
+    margin: 0;
+    border: 0; 
+     font-family: 'DM Sans', sans-serif;
+     }
+#left-side{
+    display: flex;
+    flex-wrap: wrap;
+}
 .name{
-position: absolute;
-width: 80%;
-height: 70px;
-left: 140px;
-top: 80px;
-/* 180 */
-font-family: DM Sans;
-font-style: normal;
-font-weight: bold;
-font-size: 54px;
-line-height: 70px;
-
-color: #04172A;
+    position: absolute;
+    width: 80%;
+    height: 70px;
+    left: 140px;
+    top: 120px;
+    /* 180 */
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 42px;
+    line-height: 45px;
+    color: #04172A;
 }
 
 
 .purpose{
-    position: absolute;
-width: 50%px;
-height: 31px;
-left: 140px;
-top: 186px;
-/* 266 */
-
-font-family: DM Sans;
-font-style: normal;
-font-weight: normal;
-font-size: 24px;
-line-height: 31px;
-
-color: #04172A;
-
-}
+     position: absolute;
+    width: 50%px;
+    height: 31px;
+    left: 140px;
+    top: 186px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 28px;
+    color: #04172A;
+ }
 
 .date{
- position: absolute;
-width: 50%;
-height: 31px;
-left: 551px;
-top: 186px;
-font-family: DM Sans;
-font-style: normal;
-font-weight: 500;
-font-size: 24px;
-line-height: 31px;
-color: #04172A;
+    position: absolute;
+    width: 60%;
+    height: 31px;
+    left: 571px;
+    top: 186px;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    color: #04172A;
 }
 
 /* can put as background */
 .video{
-position: absolute;
-width: 670px;
-height: 416px;
-left: 140px;
-top: 257px;
-background: url("https://i.ibb.co/mBjwP4r/photo.png");
-background-repeat: no-repeat; 
+    position: absolute;
+    width: 670px;
+    height: 416px;
+    left: 140px;
+    top: 257px;
+    background: url("https://i.ibb.co/mBjwP4r/photo.png");
+    background-repeat: no-repeat; 
 }
 
 .video .vd-logo1{
@@ -72,20 +76,20 @@ background-repeat: no-repeat;
     margin-left: 270px;
 }
 
-
 .right-side{
-position: absolute;
-width: 400px;
-height: 513px;
-left: 850px;
-top: 257px;
-right: 550px;
-bottom: 340px;
-/* border: 2px dashed red; */
-background: #FFFFFF;
-border: 1px solid rgba(4, 23, 42, 0.25);
-box-sizing: border-box;
-border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    position: absolute;
+    width: 400px;
+    height: 513px;
+    left: 850px;
+    top: 257px;
+    right: 550px;
+    bottom: 340px;
+    background: #FFFFFF;
+    border: 1px solid rgba(4, 23, 42, 0.25);
+    box-sizing: border-box;
+    border-radius: 10px;
 }
 
 .bid {
@@ -94,24 +98,21 @@ border-radius: 10px;
     height: 47px;
     left: 20px;
     top: 3px;
-    font-family: DM Sans;
     font-style: normal;
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 47px;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 57px;
     color: #04172A;
 }
 
 .form{
-position: absolute;
-width: 392px;
-height: 48px;
-left: 850px;
-top: 350px;
-
-/* border: 2px solid #04172A; */
-box-sizing: border-box;
-border-radius: 5px;
+    position: absolute;
+    width: 392px;
+    height: 48px;
+    left: 850px;
+    top: 340px;
+    box-sizing: border-box;
+    border-radius: 5px;
 }
 
 /* form */
@@ -124,74 +125,73 @@ input[type=text], select {
     border: 1px solid #ccc;
     border-radius: 4px;
     box-sizing: border-box;
-  }
-  
-  button {
+    font-size: 14px;
+}
+
+button {
     width: 100%;
-    background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
-    margin: 8px 0;
+    margin: 25px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-weight: 500;
-font-size: 32px;
-line-height: 42px;
-  }
-  
-  button {
+    font-size: 25px;
+    line-height: 35px;
+    text-align: left;
+}
+
+button {
     background-color: #45a049;
     background: #FB3F5C;
-border-radius: 10px;
-cursor: pointer;
-  }
-  
-  div {
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+div {
     border-radius: 5px;
     /* background-color: #f2f2f2; */
     padding: 20px;
-  }
+}
 
-  .form .form1{
-    margin: -20px;
-      
+.form .form1{
+     margin: -20px;
 }
 
 .loan{
     font-family: DM Sans;
-font-style: normal;
-font-weight: normal;
-font-size: 16px;
-line-height: 21px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 21px;
 }
 
 /* downside */
 
 .need{
-position: absolute;
-width: 376px;
-height: 120px;
-left: 140px;
-top: 705px;
-
-background: #FFFFFF;
-border: 1px solid rgba(4, 23, 42, 0.25);
-box-sizing: border-box;
-border-radius: 10px;
+    position: absolute;
+    width: 376px;
+    height: 120px;
+    left: 140px;
+    top: 685px;
+    background: #FFFFFF;
+    border: 1px solid rgba(4, 23, 42, 0.25);
+    box-sizing: border-box;
+    border-radius: 10px;
 }
 
 .has{
     position: absolute;
-width: 278px;
-height: 120px;
-left: 532px;
-top: 705px;
-background: #FFFFFF;
-border: 1px solid rgba(4, 23, 42, 0.25);
-box-sizing: border-box;
-border-radius: 10px;
-}
+    width: 278px;
+    height: 120px;
+    left: 532px;
+    top: 685px;
+    background: #FFFFFF;
+    border: 1px solid rgba(4, 23, 42, 0.25);
+    box-sizing: border-box;
+    border-radius: 10px;
+ }
 
 .asset{
     margin-top: 5px;
@@ -200,117 +200,110 @@ border-radius: 10px;
 
 .voucher-title{
     position: absolute;
-width: 108px;
-height: 31px;
-left: 140px;
-top: 849px;
-
-font-family: DM Sans;
-font-style: normal;
-font-weight: 500;
-font-size: 24px;
-line-height: 31px;
-
-color: #000000;
+    width: 108px;
+    height: 31px;
+    left: 140px;
+    top: 819px;
+    font-family: DM Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+    color: #000000;
 }
 
 .voucher-line{
     position: absolute;
-width: 670px;
-height: 128px;
-left: 140px;
-top: 913px;
-overflow: hidden;
-background: #FFFFFF;
-border: 1px solid rgba(4, 23, 42, 0.5);
-box-sizing: border-box;
-border-radius: 10px;
+    width: 670px;
+    height: 128px;
+    left: 140px;
+    top: 883px;
+    overflow: hidden;
+    background: #FFFFFF;
+    border: 1px solid rgba(4, 23, 42, 0.5);
+    box-sizing: border-box;
+    border-radius: 10px;
 }
 
 .voucher{
-position: relative;
-width: 80px;
-height: 80px;
-left: 5px;
-top: 27px;
-margin-right: 7px;
-margin-top:  -25px;
-/* overflow: hidden; */
-
-/* background: url(48m.jpg); */
+    position: relative;
+    width: 80px;
+    height: 80px;
+    left: 5px;
+    top: 27px;
+    margin-right: 7px;
+    margin-top:  -25px;
 }
 
 #next{
-    margin-left: 230px;
+    margin-left: 240px;
+}
+.next{
+    margin-left: 170px;
+    font-size: 13px;
 }
 .description-title{
-    position: absolute;
+position: absolute;
 width: 128px;
 height: 26px;
 left: 141px;
-top: 1080px;
-
+top: 1030px;
 font-family: DM Sans;
 font-style: normal;
 font-weight: 500;
 font-size: 20px;
 line-height: 26px;
-/* identical to box height */
 color: #04172A;
 }
 
 .description-info{
-    position: absolute;
+position: absolute;
 width: 670px;
 height: 288px;
 left: 140px;
-top: 1115px;
+top: 1080px;
 font-family: DM Sans;
 font-style: normal;
 font-weight: normal;
-font-size: 20px;
-line-height: 36px;
-/* or 180% */
+font-size: 18px;
+line-height: 30px;
 color: #000000;
 }
 
-.sign-name{
-    
+.sign-name{    
 position: absolute;
 width: 163px;
 height: 47px;
 left: 140px;
-top: 1430px;
-
+top: 1350px;
 font-family: DM Sans;
 font-style: normal;
 font-weight: bold;
-font-size: 36px;
-line-height: 47px;
-/* identical to box height */
-
-
+font-size: 28px;
+line-height: 38px;
 color: #04172A;
 }
 
 
 .sign-button{
-    position: absolute;
-    width: 178px;
-    height: 72px;
-    left: 632px;
-    top: 1420px;
-    border: 2px solid #FB3F5C;
-    box-sizing: border-box;
-    border-radius: 10px;
+position: absolute;
+width: 178px;
+height: 72px;
+left: 632px;
+top: 1320px;
+border: 2px solid #FB3F5C;
+background-color: white;
+box-sizing: border-box;
+border-radius: 10px;
+color: #FB3F5C;
+text-align: center;
+
 }
 
 #cycle{
-    position: absolute;
-    left: 300px;
+position: absolute;
+left: 276px;
 right: 8.33%;
-top: 1472px; 
+top: 1382px; 
 bottom: 41.62%;
-
 }
-
